--- a/index.html
+++ b/index.html
@@ -3,9 +3,62 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Landing Page</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="header">
+        <div>Header Logo</div>
+        <ul>
+            <li>header link one</li>
+            <li>header link two</li>
+            <li>header link three</li>
+        </ul>
+    </div>
+    <div class="hero">
+        <div class="website-main>">
+            <h1>Website Hero Text</h1>
+            <p class="text">text text text text text text</p>
+            <button class="buttons">Sign Up</button>
+        </div>
+        <div>image placeholder</div>
+    </div>
+    <div class="information">
+        <h2>Sub Header for Information Block</h2>
+        <div class="card-block">
+            <div class="cards">
+                <div>image placeholder</div>
+                <p class="text">text text text</p>
+            </div>
+            <div class="cards">
+                <div>image placeholder</div>
+                <p class="text">text text text</p>
+            </div>
+            <div class="cards">
+                <div>image placeholder</div>
+                <p class="text">text text text</p>
+            </div>
+            <div class="cards">
+                <div>image placeholder</div>
+                <p class="text">text text text</p>
+            </div>
+        </div> 
+    </div>
+    <div class="quote-block">
+        <p class="quote">"Oh wow a really cool quote"</p>
+        <p class="speaker"></p>
+    </div>
+    <div class="call">
+        <div class="blue-box">
+            <div class="text">
+                <h3>Call to action header</h3>
+                <div class="text">Call to action text text text text</div>
+            </div>
+            <button class="buttons">Sign Up</button>
+        </div>
+    </div>
+    <div class="footer">
+        <div>Copyright The Odin Project 2024</div>
+    </div>
 </body>
 </html>
