--- a/index.html
+++ b/index.html
@@ -7,58 +7,70 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="header">
-        <div>Header Logo</div>
-        <ul>
-            <li><a href="#">header link one</a></li>
-            <li><a href="#">header link two</a></li>
-            <li><a href="#">header link three</a></li>
-        </ul>
-    </div>
-    <div class="hero">
-        <div class="website-main>">
-            <h1>Website Hero Text</h1>
-            <p class="text">text text text text text text</p>
-            <button class="buttons">Sign Up</button>
-        </div>
-        <div>image placeholder</div>
-    </div>
-    <div class="information">
-        <h2>Sub Header for Information Block</h2>
-        <div class="card-block">
-            <div class="cards">
-                <div>image placeholder</div>
-                <p class="text">text text text</p>
-            </div>
-            <div class="cards">
-                <div>image placeholder</div>
-                <p class="text">text text text</p>
-            </div>
-            <div class="cards">
-                <div>image placeholder</div>
-                <p class="text">text text text</p>
-            </div>
-            <div class="cards">
-                <div>image placeholder</div>
-                <p class="text">text text text</p>
-            </div>
-        </div> 
-    </div>
-    <div class="quote-block">
-        <p class="quote">"Oh wow a really cool quote"</p>
-        <p class="speaker"></p>
-    </div>
-    <div class="call">
-        <div class="blue-box">
-            <div class="text">
-                <h3>Call to action header</h3>
-                <div class="text">Call to action text text text text</div>
-            </div>
-            <button class="buttons">Sign Up</button>
+    <div class="section-one">
+        <div class="header">
+            <div>Header Logo</div>
+            <ul>
+                <li><a href="#">header link one</a></li>
+                <li><a href="#">header link two</a></li>
+                <li><a href="#">header link three</a></li>
+            </ul>
         </div>
     </div>
-    <div class="footer">
-        <div>Copyright The Odin Project 2024</div>
+    <div class="section-two">
+        <div class="hero">
+            <div class="website-main>">
+                <h1>Website Hero Text</h1>
+                <p class="text">text text text text text text</p>
+                <button class="buttons">Sign Up</button>
+            </div>
+            <img class="placeholder"></img>
+        </div>
+    </div>
+    <div class="section-three">
+        <div class="information">
+            <h2>Sub Header for Information Block</h2>
+            <div class="card-block">
+                <div class="cards">
+                    <img class="mini-placeholder"></img>
+                    <p class="text">text text text</p>
+                </div>
+                <div class="cards">
+                    <img class="mini-placeholder"></img>
+                    <p class="text">text text text</p>
+                </div>
+                <div class="cards">
+                    <img class="mini-placeholder"></img>
+                    <p class="text">text text text</p>
+                </div>
+                <div class="cards">
+                    <img class="mini-placeholder"></img>
+                    <p class="text">text text text</p>
+                </div>
+            </div> 
+        </div>
+    </div>
+    <div class="section-four">
+        <div class="quote-block">
+            <p class="quote">"Oh wow a really cool quote"</p>
+            <p class="speaker">- speaker of a really cool quote</p>
+        </div>
+    </div>
+    <div class="section-five">
+        <div class="call">
+            <div class="blue-box">
+                <div class="text">
+                    <h3>Call to action header</h3>
+                    <div class="text">Call to action text text text text</div>
+                </div>
+                <button class="buttons">Sign Up</button>
+            </div>
+        </div>
+    </div>
+    <div class="section-six">
+        <div class="footer">
+            <div>Copyright The Odin Project 2024</div>
+        </div>
     </div>
 </body>
 </html>
