Finalize TOP html and CSS landing page

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="section-one">
         <div class="header">
-            <div>Header Logo</div>
+            <div class="logo">Header Logo</div>
             <ul>
                 <li><a href="#">header link one</a></li>
                 <li><a href="#">header link two</a></li>
@@ -20,32 +20,32 @@
     <div class="section-two">
         <div class="hero">
             <div class="website-main>">
-                <h1>Website Hero Text</h1>
-                <p class="text">text text text text text text</p>
-                <button class="buttons">Sign Up</button>
+                <div class="hero-header">Website Hero Text</div>
+                <div class="text">text text text text text text</div>
+                <button>Sign Up</button>
             </div>
             <img class="placeholder"></img>
         </div>
     </div>
     <div class="section-three">
         <div class="information">
-            <h2>Sub Header for Information Block</h2>
+            <p class="info-header">Sub Header for Information Block</p>
             <div class="card-block">
                 <div class="cards">
                     <img class="mini-placeholder"></img>
-                    <p class="text">text text text</p>
+                    <p class="text">text text text text text text text text text</p>
                 </div>
                 <div class="cards">
                     <img class="mini-placeholder"></img>
-                    <p class="text">text text text</p>
+                    <p class="text">text text text text text text text text text</p>
                 </div>
                 <div class="cards">
                     <img class="mini-placeholder"></img>
-                    <p class="text">text text text</p>
+                    <p class="text">text text text text text text text text text</p>
                 </div>
                 <div class="cards">
                     <img class="mini-placeholder"></img>
-                    <p class="text">text text text</p>
+                    <p class="text">text text text text text text text text text</p>
                 </div>
             </div> 
         </div>
@@ -57,13 +57,13 @@
         </div>
     </div>
     <div class="section-five">
-        <div class="call">
-            <div class="blue-box">
+        <div class="blue-box">
+            <div class="call">
                 <div class="text">
-                    <h3>Call to action header</h3>
-                    <div class="text">Call to action text text text text</div>
+                    <p class="call-header">Call to action header!</p>
+                    <p class="text">Call to action text text text text text text text text text text text text text text text text</p>
                 </div>
-                <button class="buttons">Sign Up</button>
+                <button class="signup-button">Sign Up</button>
             </div>
         </div>
     </div>
